--- a/alter/amp.html
+++ b/alter/amp.html
@@ -23,10 +23,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/Alter.5f43590a.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.c3554ea5.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.09993f0d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.f091bb9b.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.5a9a0a30.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.7aadab41.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.4833d97a.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/4.ab16bdea.js">
@@ -41,7 +41,7 @@
 			
 			<script>
 				{
-					__sveltekit_1s9yyi8 = {
+					__sveltekit_33c7q6 = {
 						base: "",
 						env: {}
 					};
@@ -51,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.c3554ea5.js"),
-						import("/_app/immutable/entry/app.5a9a0a30.js")
+						import("/_app/immutable/entry/start.09993f0d.js"),
+						import("/_app/immutable/entry/app.4833d97a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
