--- a/alter/abyss.html
+++ b/alter/abyss.html
@@ -23,21 +23,21 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/Alter.5f43590a.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.48765475.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.2771aa71.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.43079671.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.f7503b7c.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.0b0375f0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.5f522332.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.404d026f.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.b0973439.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.98716ee0.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <a href="/" class="go-back svelte-1wbcl0j" data-svelte-h="svelte-k8hnu"><img src="/back-arrow.png" class="svelte-1wbcl0j"></a> <div class="container outer svelte-1wbcl0j"><div class="container image svelte-1wbcl0j"><span slot="image"></span></div> <div class="container info svelte-1wbcl0j"><div class="container basic svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-11lpxx1"><p class="svelte-1wbcl0j">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-b2sijc">Abyss</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1r6we22"><p class="svelte-1wbcl0j">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-yrsl3z">Persecutor, Trauma Holder</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b83z5l"><p class="svelte-1wbcl0j">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age" data-svelte-h="svelte-1bevcr1">-</span></p></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-lhrs6b"><p class="svelte-1wbcl0j">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-cugvdn">-</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-32b5g2"><p class="svelte-1wbcl0j">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-1oca8n2">-</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b7js59"><p class="svelte-1wbcl0j">Color</p></span> <span slot="color" data-svelte-h="svelte-10jm6f0"><div class="color" style="background-color: black"></div></span></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-rwh243"><p class="svelte-1wbcl0j">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-sytfha"><p class="svelte-1wbcl0j">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-kldoje">-</span></p></div></div> <div class="description svelte-1wbcl0j"><p class="description-title svelte-1wbcl0j" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1wbcl0j"><span slot="description" data-svelte-h="svelte-1ijsga9">Speculated alter.</span></p></div></div> </div> 
+		<div style="display: contents">  <a href="/" class="go-back svelte-1wbcl0j" data-svelte-h="svelte-k8hnu"><img src="/back-arrow.png" class="svelte-1wbcl0j"></a> <div class="container outer svelte-1wbcl0j"><div class="container image svelte-1wbcl0j"><span slot="image"></span></div> <div class="container info svelte-1wbcl0j"><div class="container basic svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-11lpxx1"><p class="svelte-1wbcl0j">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-b2sijc">Abyss</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1r6we22"><p class="svelte-1wbcl0j">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-myb8sx">Protector, Trauma Holder</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b83z5l"><p class="svelte-1wbcl0j">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age" data-svelte-h="svelte-1bevcr1">-</span></p></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-lhrs6b"><p class="svelte-1wbcl0j">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-cugvdn">-</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-32b5g2"><p class="svelte-1wbcl0j">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-1oca8n2">-</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b7js59"><p class="svelte-1wbcl0j">Color</p></span> <span slot="color" data-svelte-h="svelte-10jm6f0"><div class="color" style="background-color: black"></div></span></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-rwh243"><p class="svelte-1wbcl0j">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-sytfha"><p class="svelte-1wbcl0j">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-kldoje">-</span></p></div></div> <div class="description svelte-1wbcl0j"><p class="description-title svelte-1wbcl0j" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1wbcl0j"><span slot="description" data-svelte-h="svelte-2mktud">Speculated alter. Hasn&#39;t fronted since becoming self-aware.</span></p></div></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_q082eq = {
+					__sveltekit_1pssac2 = {
 						base: "",
 						env: {}
 					};
@@ -47,8 +47,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.48765475.js"),
-						import("/_app/immutable/entry/app.f7503b7c.js")
+						import("/_app/immutable/entry/start.2771aa71.js"),
+						import("/_app/immutable/entry/app.5f522332.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
