--- a/alter/trinity.html
+++ b/alter/trinity.html
@@ -23,10 +23,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/Alter.5f43590a.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.48765475.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.2771aa71.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.43079671.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.f7503b7c.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.0b0375f0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.5f522332.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/12.607408ec.js">
@@ -37,7 +37,7 @@
 			
 			<script>
 				{
-					__sveltekit_q082eq = {
+					__sveltekit_1pssac2 = {
 						base: "",
 						env: {}
 					};
@@ -47,8 +47,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.48765475.js"),
-						import("/_app/immutable/entry/app.f7503b7c.js")
+						import("/_app/immutable/entry/start.2771aa71.js"),
+						import("/_app/immutable/entry/app.5f522332.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 12],
