--- a/alter/aurora.html
+++ b/alter/aurora.html
@@ -44,23 +44,23 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/Alter.5f43590a.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.ac238ee0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.3bd6853c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.eeb85706.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.56ef43a1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d548bdb8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.cc6a667d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/5.822c794d.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/5.f6f89e0e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.98716ee0.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/common.d6240f3d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <a href="/" class="go-back svelte-1wbcl0j" data-svelte-h="svelte-k8hnu"><img src="/back-arrow.png" class="svelte-1wbcl0j"></a> <div class="container outer svelte-1wbcl0j"><div class="container image svelte-1wbcl0j"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-1wbcl0j"><div class="container basic svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-11lpxx1"><p class="svelte-1wbcl0j">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1r6we22"><p class="svelte-1wbcl0j">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-9h1s9u">Caretaker, Sexual Alter/Protector</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b83z5l"><p class="svelte-1wbcl0j">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-lhrs6b"><p class="svelte-1wbcl0j">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-32b5g2"><p class="svelte-1wbcl0j">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b7js59"><p class="svelte-1wbcl0j">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-rwh243"><p class="svelte-1wbcl0j">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-sytfha"><p class="svelte-1wbcl0j">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-1wbcl0j"><p class="description-title svelte-1wbcl0j" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1wbcl0j"><span slot="description" data-svelte-h="svelte-4fbmeg">I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
+		<div style="display: contents">  <a href="/" class="go-back svelte-1wbcl0j" data-svelte-h="svelte-k8hnu"><img src="/back-arrow.png" class="svelte-1wbcl0j"></a> <div class="container outer svelte-1wbcl0j"><div class="container image svelte-1wbcl0j"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-1wbcl0j"><div class="container basic svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-11lpxx1"><p class="svelte-1wbcl0j">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1r6we22"><p class="svelte-1wbcl0j">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-1r23qr7">Caretaker</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b83z5l"><p class="svelte-1wbcl0j">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-lhrs6b"><p class="svelte-1wbcl0j">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-32b5g2"><p class="svelte-1wbcl0j">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b7js59"><p class="svelte-1wbcl0j">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-rwh243"><p class="svelte-1wbcl0j">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-sytfha"><p class="svelte-1wbcl0j">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-1wbcl0j"><p class="description-title svelte-1wbcl0j" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1wbcl0j"><span slot="description" data-svelte-h="svelte-4fbmeg">I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
         I like to dance, sing. I thrive when my environment is tidy and my body is clean. I love to cook and eat; hopefully all that hummus goes to my hips!</span></p></div></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_iawaer = {
+					__sveltekit_1q9ls2i = {
 						base: "",
 						env: {}
 					};
@@ -70,8 +70,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.ac238ee0.js"),
-						import("/_app/immutable/entry/app.56ef43a1.js")
+						import("/_app/immutable/entry/start.3bd6853c.js"),
+						import("/_app/immutable/entry/app.cc6a667d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
