--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09b96b39.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.ac238ee0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.3bd6853c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.eeb85706.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.56ef43a1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d548bdb8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.cc6a667d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/2.17e32c42.js">
@@ -57,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_iawaer = {
+					__sveltekit_1q9ls2i = {
 						base: "",
 						env: {}
 					};
@@ -67,8 +67,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.ac238ee0.js"),
-						import("/_app/immutable/entry/app.56ef43a1.js")
+						import("/_app/immutable/entry/start.3bd6853c.js"),
+						import("/_app/immutable/entry/app.cc6a667d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
