--- a/alter/aurora.html
+++ b/alter/aurora.html
@@ -44,22 +44,22 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/common.67122a06.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.976bd9e6.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.37c3d082.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.0e5b9986.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.7e891d83.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.3e603344.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.953c204b.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/4.db113503.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/4.dfb91aeb.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/common.547c3d9b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div id="outer-container" class="svelte-8lkq1v"><div class="flex-pad svelte-8lkq1v"></div> <div id="data-container" class="svelte-8lkq1v"><a class="back" href="/" data-svelte-h="svelte-1ifnzag">⬅️ Home</a> <h1><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></h1> <div class="image-container svelte-8lkq1v"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <span class="vertical-padding svelte-8lkq1v"></span> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1cxftya">Role</h2> <p><span slot="role" data-svelte-h="svelte-1r23qr7">Caretaker</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-todr4b">Age</h2> <p><span slot="age">21</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1lugiyb">Gender</h2> <p><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-znkn7e">Pronouns</h2> <p><span slot="pronouns" data-svelte-h="svelte-gc3tew">she/her/hers</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-jdjxs4">Sexuality</h2> <p><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <h2 data-svelte-h="svelte-vd6tv5">Favorites</h2> <h3 data-svelte-h="svelte-1hlz3iz">Color</h3> <div class="image-container svelte-8lkq1v" style="height: 100px"><span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-6ruj0x">Song</h3> <p><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-vc6z04">Food</h3> <p><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-hqk62g">Description</h2> <p><span slot="description" data-svelte-h="svelte-4fbmeg">I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
+		<div style="display: contents">  <div id="outer-container" class="svelte-8lkq1v"><div class="flex-pad svelte-8lkq1v"></div> <div id="data-container" class="svelte-8lkq1v"><a class="back" href="/" data-svelte-h="svelte-1ifnzag">⬅️ Home</a> <h1><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></h1> <div class="image-container svelte-8lkq1v"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <span class="vertical-padding svelte-8lkq1v"></span> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1cxftya">Role</h2> <p><span slot="role" data-svelte-h="svelte-1r23qr7">Caretaker</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-todr4b">Age</h2> <p><span slot="age">21</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1lugiyb">Gender</h2> <p><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-znkn7e">Pronouns</h2> <p><span slot="pronouns" data-svelte-h="svelte-gc3tew">she/her/hers</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-jdjxs4">Sexuality</h2> <p><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <h2 data-svelte-h="svelte-vd6tv5">Favorites</h2> <h3 data-svelte-h="svelte-1hlz3iz">Color</h3> <div class="image-container svelte-8lkq1v" style="height: 100px"><span slot="color" style="width: 100%; height: 100%;" data-svelte-h="svelte-133txdv"><div class="color" style="width: 100%; height: 100%; background-color: #FF5B00"></div></span></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-6ruj0x">Song</h3> <p><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-vc6z04">Food</h3> <p><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-hqk62g">Description</h2> <p><span slot="description" data-svelte-h="svelte-4fbmeg">I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
         I like to dance, sing. I thrive when my environment is tidy and my body is clean. I love to cook and eat; hopefully all that hummus goes to my hips!</span></p></div></div> <div class="flex-pad svelte-8lkq1v"></div></div> <div class="flex-pad svelte-8lkq1v"></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_1rkecx = {
+					__sveltekit_1tg0x96 = {
 						base: "",
 						env: {}
 					};
@@ -69,8 +69,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.976bd9e6.js"),
-						import("/_app/immutable/entry/app.7e891d83.js")
+						import("/_app/immutable/entry/start.37c3d082.js"),
+						import("/_app/immutable/entry/app.953c204b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
