--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09b96b39.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.976bd9e6.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.37c3d082.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.0e5b9986.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.7e891d83.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.3e603344.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.953c204b.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/2.17e32c42.js">
@@ -57,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_1rkecx = {
+					__sveltekit_1tg0x96 = {
 						base: "",
 						env: {}
 					};
@@ -67,8 +67,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.976bd9e6.js"),
-						import("/_app/immutable/entry/app.7e891d83.js")
+						import("/_app/immutable/entry/start.37c3d082.js"),
+						import("/_app/immutable/entry/app.953c204b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
